<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        
         >

        <LinearLayout
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <ToggleButton
                android:id="@+id/tog_btn_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/sound_off"
                android:textOn="@string/sound_on" />
            <ToggleButton
                android:id="@+id/tog_btn_vibrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textOff="@string/vibrate_off"
                android:textOn="@string/vibrate_on" />

            <ToggleButton
                android:id="@+id/btn_opt_sound_effect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textOff="@string/sound_effect_off"
                android:textOn="@string/sound_effect_on" />

        </LinearLayout>

    </LinearLayout>

     <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/title_image_width"
        android:layout_height="@dimen/title_image_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/maths_practice_1" />

</RelativeLayout>