<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

          <Button
            android:id="@+id/btn_addition"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/addition"
            style="@style/style_btn_menu" />
                
        <Button
            android:id="@+id/btn_multplication"
            android:layout_width="match_parent"
           android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/multplication"
			style="@style/style_btn_menu" />
        
        <!-- <Button
            android:id="@+id/btn_addition"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_img"
            android:text="@string/addition"
            android:textSize="20dp"
            android:textStyle="bold" />




        <Button
            android:id="@+id/btn_multplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_below="@+id/linearLayout1"
            android:layout_marginTop="10sp"
            android:background="@drawable/btn_img"
            android:text="@string/multplication"
            android:textSize="20dp"
            android:textStyle="bold" /> -->



        <!-- <Button
            android:id="@+id/btn_challange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/btn_img"
            android:text="@string/freeplay"
            android:textSize="20dp"
            android:textStyle="bold"
            android:typeface="normal" /> -->

    </LinearLayout>

     <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/title_image_width"
        android:layout_height="@dimen/title_image_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/maths_practice_1" />

    <!-- <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:src="@drawable/mind" /> -->

    <TextView
        android:id="@+id/txt_select_operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/select_operation_top_margin"
        android:text="@string/selectoperation"
        android:textColor="@color/Yellow"
        android:textSize="@dimen/select_operation_text_size"
        android:textStyle="bold" />

</RelativeLayout>